--- a/Views/ScheduleActivity/Delete.cshtml
+++ b/Views/ScheduleActivity/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAgenda.Models.Schedule_Activity
+﻿@model TravelAgenda.Models.ScheduleActivity
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,50 +8,50 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Schedule_Activity</h4>
+    <h4>ScheduleActivity</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Start_Hour)
+            @Html.DisplayNameFor(model => model.StartHour)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Start_Hour)
+            @Html.DisplayFor(model => model.StartHour)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.End_Hour)
+            @Html.DisplayNameFor(model => model.EndHour)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.End_Hour)
+            @Html.DisplayFor(model => model.EndHour)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Start_Minute)
+            @Html.DisplayNameFor(model => model.StartMinute)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Start_Minute)
+            @Html.DisplayFor(model => model.StartMinute)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.End_Minute)
+            @Html.DisplayNameFor(model => model.EndMinute)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.End_Minute)
+            @Html.DisplayFor(model => model.EndMinute)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Start_Date)
+            @Html.DisplayNameFor(model => model.StartDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Start_Date)
+            @Html.DisplayFor(model => model.StartDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.End_Date)
+            @Html.DisplayNameFor(model => model.EndDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.End_Date)
+            @Html.DisplayFor(model => model.EndDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Add_Info)
+            @Html.DisplayNameFor(model => model.AddInfo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Add_Info)
+            @Html.DisplayFor(model => model.AddInfo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -60,10 +60,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Place_Id)
+            @Html.DisplayNameFor(model => model.PlaceId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Place_Id)
+            @Html.DisplayFor(model => model.PlaceId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
@@ -81,13 +81,12 @@
             @Html.DisplayNameFor(model => model.Schedule)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Schedule.Schedule_Id)
+            @Html.DisplayFor(model => model.Schedule.ScheduleId)
         </dd>
-
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Schedule_Activity_Id" />
+        <input type="hidden" asp-for="ScheduleActivityId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
