--- a/Views/UserInfoes/Delete.cshtml
+++ b/Views/UserInfoes/Delete.cshtml
@@ -26,7 +26,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="UserInfo_Id" />
+        <input type="hidden" asp-for="UserInfoId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
