--- a/Views/UserInfoes/Details.cshtml
+++ b/Views/UserInfoes/Details.cshtml
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.UserInfo_Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.UserInfoId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
