--- a/Views/UserInfoes/Index.cshtml
+++ b/Views/UserInfoes/Index.cshtml
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.User.Id)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.UserInfo_Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UserInfo_Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UserInfo_Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.UserInfoId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.UserInfoId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.UserInfoId">Delete</a>
             </td>
         </tr>
 }
